# desktop72

./: .gitignore  CMakeLists.txt
desktop72/: CMakeLists.txt  _main.cpp  comandlistener.cpp  comandlistener.h  footer.cpp  footer.h  footer__update_pixmaps.cpp  main.cpp
